# C_Lecture_1

./: .gitignore  CMakeLists.txt
Hausaufgabe1/: calc.c
Hausaufgabe1/libs/: calculator.c  calculator.h  complex_number.c  complex_number.h
Hausaufgabe2/: main.c
Hausaufgabe2/libs/: functions.c  functions.h  newton.c  newton.h
Hausaufgabe3/: linkedListLib.c  linkedListLib.h  main.c
Hausaufgabe4/: eulerLib.c  eulerLib.h  main.c
